--- a/src/_locales/it/messages.json
+++ b/src/_locales/it/messages.json
@@ -24,11 +24,11 @@
     "description": "Label for folder path input"
   },
   "extensions": {
-    "message": "Estensioni",
+    "message": "Estensioni (opzionale)",
     "description": "Label for extensions input"
   },
   "extensionsPlaceholder": {
-    "message": "es: .pdf, .jpg, .doc",
+    "message": "es: .mp4, .mkv, .avi",
     "description": "Placeholder for extensions input"
   },
   "edit": {
@@ -55,6 +55,22 @@
     "message": "Annulla",
     "description": "Cancel button text"
   },
+  "copy": {
+    "message": "Copia",
+    "description": "Copy button text"
+  },
+  "copiedToClipboard": {
+    "message": "Copiato negli appunti",
+    "description": "Toast message when text is copied"
+  },
+  "import": {
+    "message": "Importa",
+    "description": "Import button text in dialog"
+  },
+  "continue": {
+    "message": "Continua",
+    "description": "Continue button text"
+  },
 
   "categoryExists": {
     "message": "Esiste già una categoria con questo nome",
@@ -68,6 +84,18 @@
     "message": "Sei sicuro di voler eliminare questa categoria?",
     "description": "Confirmation message for category deletion"
   },
+  "deleteCategory": {
+    "message": "Elimina categoria",
+    "description": "Title for delete confirmation dialog"
+  },
+  "information": {
+    "message": "Informazione",
+    "description": "Title for info dialog"
+  },
+  "understood": {
+    "message": "Capito",
+    "description": "Button text for info dialog confirmation"
+  },
   "downloadPathInfo": {
     "message": "Tutti i percorsi delle cartelle sono relativi alla posizione di download predefinita del browser.",
     "description": "Info text explaining download paths"
@@ -79,10 +107,6 @@
   "extensionsHint": {
     "message": "Separate da virgola, opzionale",
     "description": "Hint text for extensions input"
-  },
-  "extensionsOptional": {
-    "message": "Estensioni (opzionale)",
-    "description": "Label for extensions input with optional indicator"
   },
   "noCategories": {
     "message": "Ancora nessuna categoria. Aggiungine una qui sotto!",
