--- a/src/_locales/zh_CN/messages.json
+++ b/src/_locales/zh_CN/messages.json
@@ -24,11 +24,11 @@
     "description": "Label for folder path input"
   },
   "extensions": {
-    "message": "扩展名",
+    "message": "扩展名（可选）",
     "description": "Label for extensions input"
   },
   "extensionsPlaceholder": {
-    "message": "例: .pdf, .jpg, .doc",
+    "message": "例: .mp4, .mkv, .avi",
     "description": "Placeholder for extensions input"
   },
   "edit": {
@@ -55,6 +55,22 @@
     "message": "取消",
     "description": "Cancel button text"
   },
+  "copy": {
+    "message": "复制",
+    "description": "Copy button text"
+  },
+  "copiedToClipboard": {
+    "message": "已复制到剪贴板",
+    "description": "Toast message when text is copied"
+  },
+  "import": {
+    "message": "导入",
+    "description": "Import button text in dialog"
+  },
+  "continue": {
+    "message": "继续",
+    "description": "Continue button text"
+  },
 
   "categoryExists": {
     "message": "该分类名称已存在",
@@ -68,6 +84,18 @@
     "message": "确定要删除此分类吗？",
     "description": "Confirmation message for category deletion"
   },
+  "deleteCategory": {
+    "message": "删除分类",
+    "description": "Title for delete confirmation dialog"
+  },
+  "information": {
+    "message": "提示",
+    "description": "Title for info dialog"
+  },
+  "understood": {
+    "message": "知道了",
+    "description": "Button text for info dialog confirmation"
+  },
   "downloadPathInfo": {
     "message": "所有文件夹路径均相对于浏览器的默认下载位置。",
     "description": "Info text explaining download paths"
@@ -79,10 +107,6 @@
   "extensionsHint": {
     "message": "用逗号分隔，可选",
     "description": "Hint text for extensions input"
-  },
-  "extensionsOptional": {
-    "message": "扩展名（可选）",
-    "description": "Label for extensions input with optional indicator"
   },
   "noCategories": {
     "message": "暂无分类。请在下方添加！",
