The default folder becomes the browser's default download folder

--- a/src/_locales/ca/messages.json
+++ b/src/_locales/ca/messages.json
@@ -168,13 +168,7 @@
     "description": "Title of the context menu parent item"
   },
   "contextMenuDefault": {
-    "message": "Per defecte ($FOLDER$)",
-    "description": "Context menu item for default folder",
-    "placeholders": {
-      "folder": {
-        "content": "$1",
-        "example": "Downloads"
-      }
-    }
+    "message": "Per defecte",
+    "description": "Context menu item for default folder"
   }
 }
