--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -169,13 +169,7 @@
     "description": "Title of the context menu parent item"
   },
   "contextMenuDefault": {
-    "message": "Par défaut ($FOLDER$)",
-    "description": "Context menu item for default folder",
-    "placeholders": {
-      "folder": {
-        "content": "$1",
-        "example": "Downloads"
-      }
-    }
+    "message": "Par défaut",
+    "description": "Context menu item for default folder"
   }
 }
